include/cblas.h

typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113,
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
typedef enum CBLAS_UPLO {
    CblasUpper = 121,
    CblasLower = 122
} CBLAS_UPLO;
/*
 * Level 1
 */
float  cblas_sasum (const int n, const float  *x, const int incx);
double cblas_dasum (const int n, const double *x, const int incx);
float  cblas_scasum(const int n, const void   *x, const int incx);
double cblas_dzasum(const int n, const void   *x, const int incx);
void cblas_saxpy(const int n, const float   alpha, const float  *x, const int incx, float  *y, const int incy);
void cblas_daxpy(const int n, const double  alpha, const double *x, const int incx, double *y, const int incy);
void cblas_caxpy(const int n, const void   *alpha, const void   *x, const int incx, void   *y, const int incy);
void cblas_zaxpy(const int n, const void   *alpha, const void   *x, const int incx, void   *y, const int incy);
void cblas_scopy(const int n, const float  *x, const int incx, float  *y, const int incy);
void cblas_dcopy(const int n, const double *x, const int incx, double *y, const int incy);
void cblas_ccopy(const int n, const void   *x, const int incx, void   *y, const int incy);
void cblas_zcopy(const int n, const void   *x, const int incx, void   *y, const int incy);
float  cblas_sdot(const int n, const float  *x, const int incx, const float  *y, const int incy);
double cblas_ddot(const int n, const double *x, const int incx, const double *y, const int incy);
void cblas_cdotc_sub(const int n, const void *x, const int incx, const void *y, const int incy, void *ret);
void cblas_zdotc_sub(const int n, const void *x, const int incx, const void *y, const int incy, void *ret);
void cblas_cdotu_sub(const int n, const void *x, const int incx, const void *y, const int incy, void *ret);
void cblas_zdotu_sub(const int n, const void *x, const int incx, const void *y, const int incy, void *ret);
float  cblas_snrm2 (const int n, const float  *x, const int incx);
double cblas_dnrm2 (const int n, const double *x, const int incx);
float  cblas_scnrm2(const int n, const void   *x, const int incx);
double cblas_dznrm2(const int n, const void  *x, const int incx);
void cblas_srot (const int n, float  *x, const int incx, float  *y, const int incy, const float  c, const float  s);
void cblas_drot (const int n, double *x, const int incx, double *y, const int incy, const double c, const double s);
void cblas_csrot(const int n, void   *x, const int incx, void   *y, const int incy, const float  c, const float  s);
void cblas_zdrot(const int n, void   *x, const int incx, void   *y, const int incy, const double c, const double s);
void cblas_srotg(float  *a, float  *b, float  *c, float  *s);
void cblas_drotg(double *a, double *b, double *c, double *s);
void cblas_crotg(void   *a, void   *b, float  *c, void   *s);
void cblas_zrotg(void   *a, void   *b, double *c, void   *s);
void cblas_srotm(const int n, float  *x, const int incx, float  *y, const int incy, const float  *param);
void cblas_drotm(const int n, double *x, const int incx, double *y, const int incy, const double *param);
void cblas_srotmg(float  *d1, float  *d2, float  *x1, const float  y1, float  *param);
void cblas_drotmg(double *d1, double *d2, double *x1, const double y1, double *param);
void cblas_sscal(const int n, const float   alpha, float  *x, const int incx);
void cblas_dscal(const int n, const double  alpha, double *x, const int incx);
void cblas_cscal(const int n, const void   *alpha, void   *x, const int incx);
void cblas_zscal(const int n, const void   *alpha, void   *x, const int incx);
void cblas_csscal(const int n, const float  alpha, void *x, const int incx);
void cblas_zdscal(const int n, const double alpha, void *x, const int incx);
void cblas_sswap(const int n, float  *x, const int incx, float  *y, const int incy);
void cblas_dswap(const int n, double *x, const int incx, double *y, const int incy);
void cblas_cswap(const int n, void   *x, const int incx, void   *y, const int incy);
void cblas_zswap(const int n, void   *x, const int incx, void   *y, const int incy);
unsigned int cblas_isamax(const int n, const float  *x, const int incx);
unsigned int cblas_idamax(const int n, const double *x, const int incx);
unsigned int cblas_icamax(const int n, const void   *x, const int incx);
unsigned int cblas_izamax(const int n, const void   *x, const int incx);
unsigned int cblas_isamin(const int n, const float  *x, const int incx);
unsigned int cblas_idamin(const int n, const double *x, const int incx);
unsigned int cblas_icamin(const int n, const void   *x, const int incx);
unsigned int cblas_izamin(const int n, const void   *x, const int incx);
/*
 * Level 2
 */
void cblas_sgbmv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const int kl, const int ku, const float   alpha, const float  *A, const int lda, const float  *x, const int incx, const float   beta, float  *y, const int incy);
void cblas_dgbmv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const int kl, const int ku, const double  alpha, const double *A, const int lda, const double *x, const int incx, const double  beta, double *y, const int incy);
void cblas_cgbmv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const int kl, const int ku, const void   *alpha, const void   *A, const int lda, const void   *x, const int incx, const void   *beta, void   *y, const int incy);
void cblas_zgbmv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const int kl, const int ku, const void   *alpha, const void   *A, const int lda, const void   *x, const int incx, const void   *beta, void   *y, const int incy);
void cblas_sgemv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const float   alpha, const float  *A, const int lda, const float  *x, const int incx, const float   beta, float  *y, const int incy);
void cblas_dgemv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const double  alpha, const double *A, const int lda, const double *x, const int incx, const double  beta, double *y, const int incy);
void cblas_cgemv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const void   *alpha, const void   *A, const int lda, const void   *x, const int incx, const void   *beta, void   *y, const int incy);
void cblas_zgemv(const CBLAS_ORDER order, const CBLAS_TRANSPOSE transA, const int m, const int n, const void   *alpha, const void   *A, const int lda, const void   *x, const int incx, const void   *beta, void   *y, const int incy);
void cblas_sger(const CBLAS_ORDER order, const int m, const int n, const float  alpha, const float  *x, const int incx, const float  *y, const int incy, float  *A, const int lda);
void cblas_dger(const CBLAS_ORDER order, const int m, const int n, const double alpha, const double *x, const int incx, const double *y, const int incy, double *A, const int lda);
void cblas_cgerc(const CBLAS_ORDER order, const int m, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);
void cblas_zgerc(const CBLAS_ORDER order, const int m, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);
void cblas_cgeru(const CBLAS_ORDER order, const int m, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);
void cblas_zgeru(const CBLAS_ORDER order, const int m, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);
void cblas_chbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const int k, const void *alpha, const void *A, const int lda, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_zhbmv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const int k, const void *alpha, const void *A, const int lda, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_chemv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *A, const int lda, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_zhemv(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *A, const int lda, const void *x, const int incx, const void *beta, void *y, const int incy);
void cblas_cher(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const float  alpha, const void *x, const int incx, void *A, const int lda);
void cblas_zher(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const double alpha, const void *x, const int incx, void *A, const int lda);
void cblas_cher2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);
void cblas_zher2(const CBLAS_ORDER order, const CBLAS_UPLO uplo, const int n, const void *alpha, const void *x, const int incx, const void *y, const int incy, void *A, const int lda);