src/linalg/cblas.zig

const complex = @import("../complex.zig");
const cf32 = complex.cf32;
const cf64 = complex.cf64;

pub const row_major: c_int = 101;
pub const col_major: c_int = 102;

pub const no_trans: c_int = 111;
pub const trans: c_int = 112;
pub const conj_trans: c_int = 113;
pub const conj_no_trans: c_int = 114;

pub const upper: c_int = 121;
pub const lower: c_int = 122;

pub const non_unit: c_int = 131;
pub const unit: c_int = 132;

pub const left: c_int = 141;
pub const right: c_int = 142;

// Level 1
extern fn cblas_sasum(n: isize, x: [*c]const f32, incx: isize) f32;
extern fn cblas_dasum(n: isize, x: [*c]const f64, incx: isize) f64;
extern fn cblas_scasum(n: isize, x: [*c]const cf32, incx: isize) f32;
extern fn cblas_dzasum(n: isize, x: [*c]const cf64, incx: isize) f64;
pub const sasum = cblas_sasum;
pub const dasum = cblas_dasum;
pub const scasum = cblas_scasum;
pub const dzasum = cblas_dzasum;

extern fn cblas_saxpy(n: isize, alpha: f32, x: [*c]const f32, incx: isize, y: [*c]f32, incy: isize) void;
extern fn cblas_daxpy(n: isize, alpha: f64, x: [*c]const f64, incx: isize, y: [*c]f64, incy: isize) void;
extern fn cblas_caxpy(n: isize, alpha: [*c]const cf32, x: [*c]const cf32, incx: isize, y: [*c]cf32, incy: isize) void;
extern fn cblas_zaxpy(n: isize, alpha: [*c]const cf64, x: [*c]const cf64, incx: isize, y: [*c]cf64, incy: isize) void;
pub const saxpy = cblas_saxpy;
pub const daxpy = cblas_daxpy;
pub const caxpy = cblas_caxpy;
pub const zaxpy = cblas_zaxpy;

extern fn cblas_scopy(n: isize, x: [*c]const f32, incx: isize, y: [*c]f32, incy: isize) void;
extern fn cblas_dcopy(n: isize, x: [*c]const f64, incx: isize, y: [*c]f64, incy: isize) void;
extern fn cblas_ccopy(n: isize, x: [*c]const cf32, incx: isize, y: [*c]cf32, incy: isize) void;
extern fn cblas_zcopy(n: isize, x: [*c]const cf64, incx: isize, y: [*c]cf64, incy: isize) void;
pub const scopy = cblas_scopy;
pub const dcopy = cblas_dcopy;
pub const ccopy = cblas_ccopy;
pub const zcopy = cblas_zcopy;

extern fn cblas_sdot(n: isize, x: [*c]const f32, incx: isize, y: [*c]const f32, incy: isize) f32;
extern fn cblas_ddot(n: isize, x: [*c]const f64, incx: isize, y: [*c]const f64, incy: isize) f64;
pub const sdot = cblas_sdot;
pub const ddot = cblas_ddot;

extern fn cblas_cdotc_sub(n: isize, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, dotc: [*c]cf32) void;
extern fn cblas_zdotc_sub(n: isize, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, dotc: [*c]cf64) void;
extern fn cblas_cdotu_sub(n: isize, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, dotu: [*c]cf32) void;
extern fn cblas_zdotu_sub(n: isize, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, dotu: [*c]cf64) void;
pub const cdotc_sub = cblas_cdotc_sub;
pub const zdotc_sub = cblas_zdotc_sub;
pub const cdotu_sub = cblas_cdotu_sub;
pub const zdotu_sub = cblas_zdotu_sub;

extern fn cblas_snrm2(n: isize, x: [*c]const f32, incx: isize) f32;
extern fn cblas_dnrm2(n: isize, x: [*c]const f64, incx: isize) f64;
extern fn cblas_scnrm2(n: isize, x: [*c]const cf32, incx: isize) f32;
extern fn cblas_dznrm2(n: isize, x: [*c]const cf64, incx: isize) f64;
pub const snrm2 = cblas_snrm2;
pub const dnrm2 = cblas_dnrm2;
pub const scnrm2 = cblas_scnrm2;
pub const dznrm2 = cblas_dznrm2;

extern fn cblas_srot(n: isize, x: [*c]f32, incx: isize, y: [*c]f32, incy: isize, c: f32, s: f32) void;
extern fn cblas_drot(n: isize, x: [*c]f64, incx: isize, y: [*c]f64, incy: isize, c: f64, s: f64) void;
extern fn cblas_csrot(n: isize, x: [*c]cf32, incx: isize, y: [*c]cf32, incy: isize, c: f32, s: f32) void;
extern fn cblas_zdrot(n: isize, x: [*c]cf64, incx: isize, y: [*c]cf64, incy: isize, c: f64, s: f64) void;
extern fn cblas_crot(n: isize, x: [*c]cf32, incx: isize, y: [*c]cf32, incy: isize, c: f32, s: [*c]const cf32) void;
extern fn cblas_zrot(n: isize, x: [*c]cf64, incx: isize, y: [*c]cf64, incy: isize, c: f64, s: [*c]const cf64) void;
pub const srot = cblas_srot;
pub const drot = cblas_drot;
pub const csrot = cblas_csrot;
pub const zdrot = cblas_zdrot;
pub const crot = cblas_crot;
pub const zrot = cblas_zrot;

extern fn cblas_srotg(a: *f32, b: *f32, c: *f32, s: *f32) void;
extern fn cblas_drotg(a: *f64, b: *f64, c: *f64, s: *f64) void;
extern fn cblas_crotg(a: *cf32, b: *cf32, c: *f32, s: *cf32) void;
extern fn cblas_zrotg(a: *cf64, b: *cf64, c: *f64, s: *cf64) void;
pub const srotg = cblas_srotg;
pub const drotg = cblas_drotg;
pub const crotg = cblas_crotg;
pub const zrotg = cblas_zrotg;

extern fn cblas_srotm(n: isize, x: [*c]f32, incx: isize, y: [*c]f32, incy: isize, param: [*c]const f32) void;
extern fn cblas_drotm(n: isize, x: [*c]f64, incx: isize, y: [*c]f64, incy: isize, param: [*c]const f64) void;
pub const srotm = cblas_srotm;
pub const drotm = cblas_drotm;

extern fn cblas_srotmg(d1: *f32, d2: *f32, x1: *f32, y1: f32, param: [*c]f32) void;
extern fn cblas_drotmg(d1: *f64, d2: *f64, x1: *f64, y1: f64, param: [*c]f64) void;
pub const srotmg = cblas_srotmg;
pub const drotmg = cblas_drotmg;

extern fn cblas_sscal(n: isize, alpha: f32, x: [*c]f32, incx: isize) void;
extern fn cblas_dscal(n: isize, alpha: f64, x: [*c]f64, incx: isize) void;
extern fn cblas_cscal(n: isize, alpha: [*c]const cf32, x: [*c]cf32, incx: isize) void;
extern fn cblas_zscal(n: isize, alpha: [*c]const cf64, x: [*c]cf64, incx: isize) void;
extern fn cblas_csscal(n: isize, alpha: f32, x: [*c]cf32, incx: isize) void;
extern fn cblas_zdscal(n: isize, alpha: f64, x: [*c]cf64, incx: isize) void;
pub const sscal = cblas_sscal;
pub const dscal = cblas_dscal;
pub const cscal = cblas_cscal;
pub const zscal = cblas_zscal;
pub const csscal = cblas_csscal;
pub const zdscal = cblas_zdscal;

extern fn cblas_sswap(n: isize, x: [*c]f32, incx: isize, y: [*c]f32, incy: isize) void;
extern fn cblas_dswap(n: isize, x: [*c]f64, incx: isize, y: [*c]f64, incy: isize) void;
extern fn cblas_cswap(n: isize, x: [*c]cf32, incx: isize, y: [*c]cf32, incy: isize) void;
extern fn cblas_zswap(n: isize, x: [*c]cf64, incx: isize, y: [*c]cf64, incy: isize) void;
pub const sswap = cblas_sswap;
pub const dswap = cblas_dswap;
pub const cswap = cblas_cswap;
pub const zswap = cblas_zswap;

extern fn cblas_isamax(n: isize, x: [*c]const f32, incx: isize) usize;
extern fn cblas_idamax(n: isize, x: [*c]const f64, incx: isize) usize;
extern fn cblas_icamax(n: isize, x: [*c]const cf32, incx: isize) usize;
extern fn cblas_izamax(n: isize, x: [*c]const cf64, incx: isize) usize;
pub const isamax = cblas_isamax;
pub const idamax = cblas_idamax;
pub const icamax = cblas_icamax;
pub const izamax = cblas_izamax;

extern fn cblas_isamin(n: isize, x: [*c]const f32, incx: isize) usize;
extern fn cblas_idamin(n: isize, x: [*c]const f64, incx: isize) usize;
extern fn cblas_icamin(n: isize, x: [*c]const cf32, incx: isize) usize;
extern fn cblas_izamin(n: isize, x: [*c]const cf64, incx: isize) usize;
pub const isamin = cblas_isamin;
pub const idamin = cblas_idamin;
pub const icamin = cblas_icamin;
pub const izamin = cblas_izamin;

// Level 2
extern fn cblas_sgbmv(layout: c_int, transa: c_int, m: isize, n: isize, kl: isize, ku: isize, alpha: f32, a: [*c]const f32, lda: isize, x: [*c]const f32, incx: isize, beta: f32, y: [*c]f32, incy: isize) void;
extern fn cblas_dgbmv(layout: c_int, transa: c_int, m: isize, n: isize, kl: isize, ku: isize, alpha: f64, a: [*c]const f64, lda: isize, x: [*c]const f64, incx: isize, beta: f64, y: [*c]f64, incy: isize) void;
extern fn cblas_cgbmv(layout: c_int, transa: c_int, m: isize, n: isize, kl: isize, ku: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, x: [*c]const cf32, incx: isize, beta: [*c]const cf32, y: [*c]cf32, incy: isize) void;
extern fn cblas_zgbmv(layout: c_int, transa: c_int, m: isize, n: isize, kl: isize, ku: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, x: [*c]const cf64, incx: isize, beta: [*c]const cf64, y: [*c]cf64, incy: isize) void;
pub const sgbmv = cblas_sgbmv;
pub const dgbmv = cblas_dgbmv;
pub const cgbmv = cblas_cgbmv;
pub const zgbmv = cblas_zgbmv;

extern fn cblas_sgemv(layout: c_int, transa: c_int, m: isize, n: isize, alpha: f32, a: [*c]const f32, lda: isize, x: [*c]const f32, incx: isize, beta: f32, y: [*c]f32, incy: isize) void;
extern fn cblas_dgemv(layout: c_int, transa: c_int, m: isize, n: isize, alpha: f64, a: [*c]const f64, lda: isize, x: [*c]const f64, incx: isize, beta: f64, y: [*c]f64, incy: isize) void;
extern fn cblas_cgemv(layout: c_int, transa: c_int, m: isize, n: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, x: [*c]const cf32, incx: isize, beta: [*c]const cf32, y: [*c]cf32, incy: isize) void;
extern fn cblas_zgemv(layout: c_int, transa: c_int, m: isize, n: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, x: [*c]const cf64, incx: isize, beta: [*c]const cf64, y: [*c]cf64, incy: isize) void;
pub const sgemv = cblas_sgemv;
pub const dgemv = cblas_dgemv;
pub const cgemv = cblas_cgemv;
pub const zgemv = cblas_zgemv;

extern fn cblas_sger(layout: c_int, m: isize, n: isize, alpha: f32, x: [*c]const f32, incx: isize, y: [*c]const f32, incy: isize, a: [*c]f32, lda: isize) void;
extern fn cblas_dger(layout: c_int, m: isize, n: isize, alpha: f64, x: [*c]const f64, incx: isize, y: [*c]const f64, incy: isize, a: [*c]f64, lda: isize) void;
extern fn cblas_cgerc(layout: c_int, m: isize, n: isize, alpha: [*c]const cf32, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, a: [*c]cf32, lda: isize) void;
extern fn cblas_zgerc(layout: c_int, m: isize, n: isize, alpha: [*c]const cf64, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, a: [*c]cf64, lda: isize) void;
extern fn cblas_cgeru(layout: c_int, m: isize, n: isize, alpha: [*c]const cf32, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, a: [*c]cf32, lda: isize) void;
extern fn cblas_zgeru(layout: c_int, m: isize, n: isize, alpha: [*c]const cf64, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, a: [*c]cf64, lda: isize) void;
pub const sger = cblas_sger;
pub const dger = cblas_dger;
pub const cgerc = cblas_cgerc;
pub const zgerc = cblas_zgerc;
pub const cgeru = cblas_cgeru;
pub const zgeru = cblas_zgeru;

extern fn cblas_chbmv(layout: c_int, uplo: c_int, n: isize, k: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, x: [*c]const cf32, incx: isize, beta: [*c]const cf32, y: [*c]cf32, incy: isize) void;
extern fn cblas_zhbmv(layout: c_int, uplo: c_int, n: isize, k: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, x: [*c]const cf64, incx: isize, beta: [*c]const cf64, y: [*c]cf64, incy: isize) void;
pub const chbmv = cblas_chbmv;
pub const zhbmv = cblas_zhbmv;

extern fn cblas_chemv(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf32, a: [*c]const cf32, lda: isize, x: [*c]const cf32, incx: isize, beta: [*c]const cf32, y: [*c]cf32, incy: isize) void;
extern fn cblas_zhemv(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf64, a: [*c]const cf64, lda: isize, x: [*c]const cf64, incx: isize, beta: [*c]const cf64, y: [*c]cf64, incy: isize) void;
pub const chemv = cblas_chemv;
pub const zhemv = cblas_zhemv;

extern fn cblas_cher(layout: c_int, uplo: c_int, n: isize, alpha: f32, x: [*c]const cf32, incx: isize, a: [*c]cf32, lda: isize) void;
extern fn cblas_zher(layout: c_int, uplo: c_int, n: isize, alpha: f64, x: [*c]const cf64, incx: isize, a: [*c]cf64, lda: isize) void;
pub const cher = cblas_cher;
pub const zher = cblas_zher;

extern fn cblas_cher2(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf32, x: [*c]const cf32, incx: isize, y: [*c]const cf32, incy: isize, a: [*c]cf32, lda: isize) void;
extern fn cblas_zher2(layout: c_int, uplo: c_int, n: isize, alpha: [*c]const cf64, x: [*c]const cf64, incx: isize, y: [*c]const cf64, incy: isize, a: [*c]cf64, lda: isize) void;
pub const cher2 = cblas_cher2;
pub const zher2 = cblas_zher2;
